# module_2-HW10

./: pyproject.toml
quote/quote/: settings.py
quote/users/: urls.py  views.py
